grafana_traefik_example.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grafana-traefik
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: grafana-service
  namespace: grafana-traefik
spec:
  selector:
    app: grafana
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: grafana-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: graf.rfed.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 80
